data/issues_nolabel/nolabel_test_3357.txt
./tensorflow/core/platform/jpeg.h:31:2: error: #error Define the appropriate PLATFORM_<foo> macro for this platform

I got a problem when building tensorflow from source in Raspberrypi platform. Anyone knows how to solve it ? Thanks
pi@raspberrypi:~/tensorflow/tensorflow $ bazel build -c opt --local_resources 1024,1.0,1.0 --verbose_failures tensorflow/tools/pip_package:build_pip_package
WARNING: Sandboxed execution is not supported on your system and thus hermeticity of actions cannot be guaranteed. See http://bazel.io/docs/bazel-user-manual.html#sandboxing for more information. You can turn off this warning via --ignore_unsupported_sandboxing.
INFO: Found 1 target...
ERROR: /home/pi/tensorflow/tensorflow/tensorflow/core/BUILD:807:1: C++ compilation of rule '//tensorflow/core:lib_internal' failed: gcc failed: error executing command
(cd /home/pi/.cache/bazel/bazel_pi/72651946b65f096261d7acfbb49ff852/tensorflow && 
exec env - 
PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/games:/usr/games 
/usr/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -g0 '-std=c++0x' -DHAVE_CONFIG_H -iquote . -iquote bazel-out/host/genfiles -iquote external/protobuf -iquote bazel-out/host/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/host/genfiles/external/bazel_tools -iquote external/farmhash_archive -iquote bazel-out/host/genfiles/external/farmhash_archive -iquote external/jpeg_archive -iquote bazel-out/host/genfiles/external/jpeg_archive -iquote external/png_archive -iquote bazel-out/host/genfiles/external/png_archive -iquote external/gif_archive -iquote bazel-out/host/genfiles/external/gif_archive -iquote external/highwayhash -iquote bazel-out/host/genfiles/external/highwayhash -iquote external/re2 -iquote bazel-out/host/genfiles/external/re2 -iquote external/eigen_archive -iquote bazel-out/host/genfiles/external/eigen_archive -iquote external/zlib_archive -iquote bazel-out/host/genfiles/external/zlib_archive -isystem external/protobuf/src -isystem bazel-out/host/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem bazel-out/host/genfiles/external/farmhash_archive/farmhash-34c13ddfab0e35422f4c3979f360635a8c050260 -isystem external/jpeg_archive/jpeg-9a -isystem bazel-out/host/genfiles/external/jpeg_archive/jpeg-9a -isystem external/png_archive/libpng-1.2.53 -isystem bazel-out/host/genfiles/external/png_archive/libpng-1.2.53 -isystem external/gif_archive/giflib-5.1.4/lib -isystem bazel-out/host/genfiles/external/gif_archive/giflib-5.1.4/lib -isystem external/highwayhash -isystem bazel-out/host/genfiles/external/highwayhash -isystem external/re2 -isystem bazel-out/host/genfiles/external/re2 -isystem third_party/eigen3 -isystem bazel-out/host/genfiles/third_party/eigen3 -isystem external/eigen_archive/eigen-eigen-b4fa9622b809 -isystem bazel-out/host/genfiles/external/eigen_archive/eigen-eigen-b4fa9622b809 -isystem external/zlib_archive/zlib-1.2.8 -isystem bazel-out/host/genfiles/external/zlib_archive/zlib-1.2.8 -fno-exceptions -DEIGEN_AVOID_STL_ARRAY -pthread -no-canonical-prefixes -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE_="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' '-frandom-seed=bazel-out/host/bin/tensorflow/core/_objs/lib_internal/tensorflow/core/lib/jpeg/jpeg_handle.o' -MD -MF bazel-out/host/bin/tensorflow/core/objs/lib_internal/tensorflow/core/lib/jpeg/jpeg_handle.d -c tensorflow/core/lib/jpeg/jpeg_handle.cc -o bazel-out/host/bin/tensorflow/core/objs/lib_internal/tensorflow/core/lib/jpeg/jpeg_handle.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from ./tensorflow/core/lib/jpeg/jpeg_handle.h:22:0,
from tensorflow/core/lib/jpeg/jpeg_handle.cc:22:
./tensorflow/core/platform/jpeg.h:31:2: error: #error Define the appropriate PLATFORM macro for this platform
#error Define the appropriate PLATFORM macro for this platform
^
In file included from tensorflow/core/lib/jpeg/jpeg_handle.cc:22:0:
./tensorflow/core/lib/jpeg/jpeg_handle.h:29:17: error: variable or field 'CatchError' declared void
void CatchError(j_common_ptr cinfo);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:29:17: error: 'j_common_ptr' was not declared in this scope
./tensorflow/core/lib/jpeg/jpeg_handle.h:32:31: error: field 'pub' has incomplete type 'tensorflow::jpeg::jpeg_destination_mgr'
struct jpeg_destination_mgr pub;
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:33:3: error: 'JOCTET' does not name a type
JOCTET buffer;
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:40:26: error: field 'pub' has incomplete type 'tensorflow::jpeg::jpeg_source_mgr'
struct jpeg_source_mgr pub;
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:46:13: error: variable or field 'SetSrc' declared void
void SetSrc(j_decompress_ptr cinfo, const void *data,
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:46:13: error: 'j_decompress_ptr' was not declared in this scope
./tensorflow/core/lib/jpeg/jpeg_handle.h:46:37: error: expected primary-expression before 'const'
void SetSrc(j_decompress_ptr cinfo, const void *data,
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:47:13: error: expected primary-expression before 'unsigned'
unsigned long int datasize, bool try_recover_truncated_jpeg);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:47:41: error: expected primary-expression before 'bool'
unsigned long int datasize, bool try_recover_truncated_jpeg);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:51:14: error: variable or field 'SetDest' declared void
void SetDest(j_compress_ptr cinfo, void *buffer, int bufsize);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:51:14: error: 'j_compress_ptr' was not declared in this scope
./tensorflow/core/lib/jpeg/jpeg_handle.h:51:36: error: expected primary-expression before 'void'
void SetDest(j_compress_ptr cinfo, void *buffer, int bufsize);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:51:50: error: expected primary-expression before 'int'
void SetDest(j_compress_ptr cinfo, void *buffer, int bufsize);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:54:14: error: variable or field 'SetDest' declared void
void SetDest(j_compress_ptr cinfo, void *buffer, int bufsize,
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:54:14: error: 'j_compress_ptr' was not declared in this scope
./tensorflow/core/lib/jpeg/jpeg_handle.h:54:36: error: expected primary-expression before 'void'
void SetDest(j_compress_ptr cinfo, void *buffer, int bufsize,
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:54:50: error: expected primary-expression before 'int'
void SetDest(j_compress_ptr cinfo, void *buffer, int bufsize,
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:55:21: error: expected primary-expression before '' token
string *destination);
^
./tensorflow/core/lib/jpeg/jpeg_handle.h:55:22: error: 'destination' was not declared in this scope
string *destination);
^
tensorflow/core/lib/jpeg/jpeg_handle.cc:32:17: error: variable or field 'CatchError' declared void
void CatchError(j_common_ptr cinfo) {
^
tensorflow/core/lib/jpeg/jpeg_handle.cc:32:17: error: 'j_common_ptr' was not declared in this scope
tensorflow/core/lib/jpeg/jpeg_handle.cc:45:25: error: variable or field 'MemInitDestination' declared void
void MemInitDestination(j_compress_ptr cinfo) {
^
tensorflow/core/lib/jpeg/jpeg_handle.cc:45:25: error: 'j_compress_ptr' was not declared in this scope
tensorflow/core/lib/jpeg/jpeg_handle.cc:177:1: error: expected '}' at end of input
}  // namespace tensorflow
^
tensorflow/core/lib/jpeg/jpeg_handle.cc:177:1: error: expected '}' at end of input
Target //tensorflow/tools/pip_package:build_pip_package failed to build
INFO: Elapsed time: 10.892s, Critical Path: 7.94s